[project]
name = "eriparse"
description = "HTML Parser of Economic Research Institute Cost of Living HTML."
license = { text = "MIT" }
authors = [
    { name = "Nicholas Grillini-Lawrence" }
]
keywords = [
  "webscraper",
  "webscraping",
  "web-scraper",
  "web-scraping",
  "html",
  "eri",
  "erieri.com",
  'cost-of-living',
  "python"
]
dynamic = ["readme", "version"]

dependencies = ["bs4"]

[project.optional-dependencies]
dev = [
    "black",
    "pre-commit",
    "ruff",
    "mypy"
]

[tool.setuptools.dynamic]
version = {file = "VERSION"}
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.black]
line-length = 120

[tool.ruff]
fix = true
line-length = 120
select = ["E", "F", "B", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []
